test/fail/templatenotdefined.app
//Template with this signature not defined

application test

section datamodel

  
  define page home(){
    "1"
    home2()
  }
  